--- a/css/styles.css
+++ b/css/styles.css
@@ -662,7 +662,7 @@ button-class {
   margin-bottom: 16px;
 }
 
-.textarea {
+.review-form-comments {
   width: 100%;
   height: 120px;
   font-size: 12px;
@@ -678,7 +678,7 @@ button-class {
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.textarea:focus {
+.review-form-comments:focus {
   border-color: #4d5ae5;
 }
 
