--- a/css/styles.css
+++ b/css/styles.css
@@ -590,12 +590,17 @@ button-class {
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-close-btn:hover .modal-close-btn:focus {
+.modal-close-btn:hover {
   border: none;
   background-color: #404bbf;
 }
 
-.modal-close-icon {
+.modal-close-btn:focus {
+  background-color: #404bbf;
+  border: none;
+}
+
+.modal-close-btn:focus .modal-close-icon {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
