--- a/css/styles.css
+++ b/css/styles.css
@@ -512,7 +512,7 @@ body {
   color: #ffffff;
 }
 
-button-class {
+.button-class {
   min-width: 165px;
   height: 40px;
   display: flex;
@@ -710,7 +710,7 @@ button-class {
   cursor: pointer;
 }
 
-.review-form-checkbox-icon {
+.review-form-custom-checkbox {
   width: 16px;
   height: 16px;
   border: 1px solid rgba(46, 47, 66, 0.4);
@@ -725,20 +725,20 @@ button-class {
   margin-right: 8px;
 }
 
-.review-form-checkbox-icon svg {
+.review-form-checkbox-icon {
   width: 10px;
   height: 8px;
   fill: transparent;
 }
 
 input:checked + .review-form-checkbox-label .review-form-checkbox-icon {
-  background-color: var(--checkbox-checked-bg, #404bbf);
+  background-color: var(--review-form-custom-checkbox, #404bbf);
   border: none;
-  fill: var(--checkbox-icon-color, #f4f4fd);
+  fill: var(--review-form-checkbox-icon-color, #f4f4fd);
 }
 
 .review-form-policy-link {
-  color: var(--link-color, #4d5ae5);
+  color: var(--review-form-policy-link-color, #4d5ae5);
   text-decoration: none;
 }
 
