--- a/css/styles.css
+++ b/css/styles.css
@@ -543,10 +543,6 @@ body {
 /*===============MODAL WINDOW STYLE===============*/
 
 .modal-backdrop {
-  display: none;
-}
-
-.modal-backdrop.is-open {
   display: block;
   position: fixed;
   top: 0;
@@ -554,8 +550,17 @@ body {
   width: 100%;
   height: 100%;
   background-color: rgba(46, 47, 66, 0.4);
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-backdrop.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
 }
 
 .modal {
@@ -589,6 +594,9 @@ body {
   cursor: pointer;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-backdrop:not(.is-open) .modal {
+  transform: translate(-50%, -100%);
 }
 
 .modal-close-btn:hover {
@@ -692,22 +700,11 @@ body {
   margin-bottom: 24px;
 }
 
-.visually-hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  padding: 0;
-  margin: -1px;
-  overflow: hidden;
-  clip: rect(0, 0, 0, 0);
-  border: 0;
-}
-
 .review-form-checkbox-label {
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
-  color: var(--text-color, #8e8f99);
+  color: #8e8f99;
   cursor: pointer;
 }
 
@@ -733,9 +730,9 @@ body {
 }
 
 input:checked + .review-form-checkbox-label .review-form-checkbox-icon {
-  background-color: var(--review-form-custom-checkbox-bg, #404bbf);
+  background-color: #404bbf;
   border: none;
-  fill: var(--review-form-checkbox-icon-color, #f4f4fd);
+  fill: #f4f4fd;
 }
 
 .review-form-policy-link {
