--- a/css/styles.css
+++ b/css/styles.css
@@ -729,7 +729,7 @@ body {
   fill: transparent;
 }
 
-input:checked + .review-form-checkbox-label .review-form-checkbox-icon {
+input:checked + .review-form-checkbox-label > .review-form-checkbox-icon {
   background-color: #404bbf;
   border: none;
   fill: #f4f4fd;
