--- a/css/styles.css
+++ b/css/styles.css
@@ -729,7 +729,9 @@ body {
   fill: transparent;
 }
 
-input:checked + .review-form-checkbox-label > .review-form-checkbox-icon {
+.review-form-checkbox:checked
+  + .review-form-checkbox-label
+  > .review-form-custom-checkbox {
   background-color: #404bbf;
   border: none;
   fill: #f4f4fd;
