--- a/css/styles.css
+++ b/css/styles.css
@@ -507,6 +507,7 @@ body {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   color: #ffffff;
+  margin-left: 24px;
 }
 
 .input-class::placeholder {
@@ -722,12 +723,6 @@ body {
     border 250ms cubic-bezier(0.4, 0, 0.2, 1),
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   margin-right: 8px;
-}
-
-.review-form-checkbox-icon {
-  width: 10px;
-  height: 8px;
-  fill: transparent;
 }
 
 .review-form-checkbox:checked
