--- a/css/styles.css
+++ b/css/styles.css
@@ -482,6 +482,7 @@ body {
 /*-- FOOTER FORM --*/
 
 .footer-form-p {
+  display: inline-block;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -500,6 +501,8 @@ body {
 }
 
 .input-class {
+  display: flex;
+  padding-left: 0;
   width: 264px;
   height: 40px;
   border: 1px solid #ffffff;
@@ -507,11 +510,10 @@ body {
   font-size: 12px;
   line-height: 2;
   letter-spacing: 0.04em;
-  padding-left: 16px;
+  padding: 8px 0 8px 16px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   color: #ffffff;
-  margin-left: 24px;
 }
 
 .input-class::placeholder {
